--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -50,9 +53,19 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp:okhttp:2.4.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
 
     //Lifecycle Scope
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
+
+    //for the by viewmodels delegation
+    implementation 'androidx.activity:activity-ktx:1.4.0'
+
+    //ViewModel Scope
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+
+    //Livedata
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
