--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     //for the by viewmodels delegation
     implementation 'androidx.activity:activity-ktx:1.4.0'
 
+    //for the by activityViewModels delegation
+    implementation 'androidx.fragment:fragment-ktx:1.4.1'
+
     //ViewModel Scope
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
 
