--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,10 @@ android {
     }
 }
 
+ext {
+    roomVersion = "2.4.2"
+}
+
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -74,6 +78,13 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.13.1'
     kapt 'com.github.bumptech.glide:compiler:4.13.1'
+
+    //Room
+    implementation("androidx.room:room-runtime:$roomVersion")
+    // To use Kotlin annotation processing tool (kapt)
+    kapt("androidx.room:room-compiler:$roomVersion")
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation("androidx.room:room-ktx:$roomVersion")
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
