12: Added nav graph and set it up with bottom nav

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ android {
 
 ext {
     roomVersion = "2.4.2"
+    navVersion = "2.5.0"
 }
 
 dependencies {
@@ -85,6 +86,10 @@ dependencies {
     kapt("androidx.room:room-compiler:$roomVersion")
     // optional - Kotlin Extensions and Coroutines support for Room
     implementation("androidx.room:room-ktx:$roomVersion")
+
+    //Nav Graph
+    implementation "androidx.navigation:navigation-fragment-ktx:$navVersion"
+    implementation "androidx.navigation:navigation-ui-ktx:$navVersion"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
